--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header"); -%>
 
     <h1>ERROR 404</h1>
-    <h2><%=errorMessage%></h2>
+    <h2>Sorry we couldn't find the page you are looking for.</h2>
 
 <%- include("partials/footer1"); -%>
