--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -13,7 +13,7 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <!-- <li class="sidebar-nav"><a href="/compose" class="pub-btn btn"> Create A New Blog</a> </li> -->
-          <li class="sidebar-nav"><a href="/profile/<%=penName%>"> Dashboard</a> </li>
+          <li class="sidebar-nav"><a href="/users/<%=penName%>/profile"> Dashboard</a> </li>
           <li class="sidebar-nav"><a href="/community"> Community</a> </li>
           <li class="sidebar-nav"><a href="#">History</a> </li>
           <li class="sidebar-nav"><a href="#">Follow US</a> </li>
@@ -35,7 +35,7 @@
                 <p class="navbar-brand"><a href="/">B L O G B O W E R</a></p>
               </div>
               <ul class="nav navbar-nav navbar-right">
-                <li id="home" class="nav-item"><a class="nav-link" href="/profile/<%=penName%>">HOME</a></li>
+                <li id="home" class="nav-item"><a class="nav-link" href="/users/<%=penName%>/profile">HOME</a></li>
                 <li id="about" class="nav-item"><a class="nav-link" href="/#follow">ABOUT US</a></li>
                 <li id="contact" class="nav-item"><a class="nav-link" href="/contact">CONTACT US</a></li>
                 <!-- <li id="compose" class="nav-item"><a class="nav-link" href="/compose">CREATE</a></li> -->
