--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
       <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
           <li class="sidebar-nav"><a href="/compose" class="pub-btn"> Create A New Blog</a> </li>
-          <li class="sidebar-nav"><a href="/profile/<%=penName%>"> Dashboard</a> </li>
+          <li class="sidebar-nav"><a href="/users/<%=penName%>/profile"> Dashboard</a> </li>
           <li class="sidebar-nav"><a href="/community"> Community</a> </li>
           <li class="sidebar-nav"><a href="#">History</a> </li>
           <li class="sidebar-nav"><a href="#">Follow US</a> </li>
@@ -36,7 +36,7 @@
             <p class="navbar-brand"><a href="/">B L O G B O W E R</a></p>
           </div>
             <ul class="nav navbar-nav navbar-right">
-              <li id="home" class="nav-item"><a class="nav-link" href="/profile/<%=penName%>">HOME</a></li>
+              <li id="home" class="nav-item"><a class="nav-link" href="/users/<%=penName%>/profile">HOME</a></li>
               <li id="about" class="nav-item"><a  class="nav-link" href="/#follow">ABOUT US</a></li>
               <li id="compose" class="nav-item"><a class="nav-link" href="/compose">CREATE</a></li>
               <li class="nav-item"><a id="menu-toggle-rt" class="nav-link" href="#"><i class="fa fa-fw fa-user"></i></a></li>
