--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
             <div id="sidebar-wrapper">
                 <ul class="sidebar-nav">
                     <li class="sidebar-nav"><a href="/compose" class="pub-btn btn"> Create A New Blog</a> </li>
-                    <li class="sidebar-nav"><a href="/profile/<%=penName%>"> Dashboard</a> </li>
+                    <li class="sidebar-nav"><a href="/users/<%=penName%>/profile"> Dashboard</a> </li>
                     <li class="sidebar-nav"><a href="/community"> Community</a> </li>
                     <li class="sidebar-nav"><a href="#">History</a> </li>
                     <li class="sidebar-nav"><a href="#">Follow US</a> </li>
