--- a/views/partials/dispblogs.ejs
+++ b/views/partials/dispblogs.ejs
@@ -1,6 +1,6 @@
 <%  blogs.forEach(function(blog){ %>
 
-<a id="blog-title" href="/blogs/<%=blog.title%>">
+<a id="blog-title" href="/blogs/<%=blog.penName%>/<%=blog.title%>/<%=blog._id%>">
     <div class="blog1">
         <% let today = new Date().toString() %>
         <% let bStamp = blog._id.getTimestamp() %>
@@ -72,7 +72,7 @@
             </span><br>
         <%}%>
         <% if (Flag){%>
-            <a id="blogger" href="/profile/<%=blog.penName%>"><%=blog.penName%></a>
+            <a id="blogger" href="/users/<%=blog.penName%>/profile"><%=blog.penName%></a>
         <%}%>
         <br><br>
         <p class="blogg1">
