--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
       </div>
         <ul class="nav navbar-nav navbar-right">
           <% if (name!='Not Anyone'){%>
-              <li id="home"><a href="/profile/<%=penName%>">HOME</a></li>
+              <li id="home"><a href="/users/<%=penName%>/profile">HOME</a></li>
             <%}%>
           <li id="about"><a href="/about">ABOUT US</a></li>
           <li id="contact"><a href="/contact">CONTACT US</a></li>
