--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,6 +45,11 @@
         </nav>
     </div>
   
+    <section class="user-about">
+      <h3>User_Name</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores expedita officiis temporibus! Esse, doloribus
+        aut.</p>
+    </section>
 
   <!--Content-->
     <div class="container-fluid">
