--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,9 +46,7 @@
 
             <div id="page-content-wrapper">
 
-              <div class="wropper">
-
-                <div class="ind-cont">
+              <div class="container-fluid wropper">
                 <!--Content-->
                 <div id="gallery-carousel" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
@@ -89,7 +87,6 @@
                       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                       <span class="sr-only">Next</span>
                     </a>
-                  </div>
                 </div>
               </div>
 
@@ -101,41 +98,53 @@
         <div class="row">
             <div class="col-md-4">
                 <div id="img1">
+                  <div class="shad">
                     <h2>J.K. Rowling</h2>
                     <p>"If you want to know what a man's like, take a good look at how he treats his inferiors, not his equals"</p>
+                  </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div id="img2">
-                    <h2>William Wordsworth</h2>
-                    <p>"Come Forth into the light of things, Let Nature be your Teacher"</p>
+                    <div class="shad">
+                      <h2>William Wordsworth</h2>
+                      <p>"Come Forth into the light of things, Let Nature be your Teacher"</p>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div id="img3">
+                  <div class="shad">
                     <h2>George R.R. Martin</h2>
-                    <p>A reader lives a thousand lives before he dies. The man who never reads lives only one.</p>
+                    <p>"A reader lives a thousand lives before he dies. The man who never reads lives only one"</p>
+                  </div>
                 </div>
             </div>
         </div>
         <div class="row">
           <div class="col-md-4">
               <div id="img4">
+                <div class="shad">
                   <h2>Gillian Flynn</h2>
                   <p>"Our kind of love can go into remission, but it's always waiting to return. Like the world's sweetest cancer”</p>
+                </div>
               </div>
           </div>
           <div class="col-md-4">
               <div id="img5">
+                  <div class="shad">
                   <h2>William Thackarey</h2>
-                  <p>All is Vanity, Nothing is Fair</p>
+                  <p>"All is Vanity, Nothing is Fair"</p>
+                  </div>
               </div>
           </div>
           <div class="col-md-4">
               <div id="img6">
+                <div class="shad">
                   <h2>Sylvia Plath</h2>
                   <p>
                     “Perhaps some day I'll crawl back home, beaten, defeated. But not as long as I can make stories out of my heartbreak, beauty out of sorrow.”</p>
+                  </div>
               </div>
           </div>
       </div>
@@ -149,8 +158,8 @@
     <div class="container gtx">
       <div class="row">
         <div class="ab col-md-4">
-          <h1>ABHIK SEN</h1>
-          <p>Student At BIT MESRA</p>
+          <h1>ABHIK</h1>
+          <p>Sophomore, BIT MESRA</p>
           <div class="soci">
             <a href="mailto: abhik333333@gmail.com" class="soc"><i class="fa fa-fw fa-google"></i></a>
             <a href="https://www.facebook.com/abhik.sen.378" class="soc"><i class="fa fa-fw fa-facebook"></i></a>
@@ -158,8 +167,8 @@
           </div>
         </div>
         <div class="ab col-md-4">
-          <h1>ARCHIT ANAND</h1>
-          <p>Student At IIT PATNA</p>
+          <h1>ARCHIT</h1>
+          <p>Sophomore, IIT PATNA</p>
           <div class="soci">
             <a href="mailto: archit342000@gmail.com" class="soc"><i class="fa fa-fw fa-google"></i></a>
             <a href="https://www.facebook.com/archit.anand.509" class="soc"><i class="fa fa-fw fa-facebook"></i></a>
@@ -167,8 +176,8 @@
           </div>
         </div>
         <div class="ab col-md-4">
-          <h1>ABHEET PANDEY</h1>
-          <p>Student At BIT MESRA</p>
+          <h1>ABHEET</h1>
+          <p>Sophomore, BIT MESRA</p>
           <div class="soci">
           <a href="mailto: pandeyabheet27@gmail.com" class="soc"><i class="fa fa-fw fa-google"></i></a>
           <a href="https://www.facebook.com/abheet.pandey.1" class="soc"><i class="fa fa-fw fa-facebook"></i></a>
