--- a/views/post.ejs
+++ b/views/post.ejs
@@ -53,7 +53,8 @@
             </div>
           </nav>
         </div>
-
+        <!-- <input type="text" value="Hello" id="myInput" disabled>
+        <button id="copy">Copy text</button> -->
 
         <!--Content-->
         <div class="container-fluid">
@@ -146,6 +147,7 @@
 </body>
 
   <!-- Menu Toggle JS-->
+  <script src="/js/share.js"></script>
   <script src="/js/sidebar.js"></script>
   <%- include("partials/footer1"); -%>
 
