--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -55,13 +55,23 @@
                     </nav>
                 </div>
 
-
+                <section class="user-about">
+                    <div id="profileDp">
+                        <img src="https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png" alt="">
+                    </div>
+                    <div class="profileDetails">
+                        <h3>Touka_Kirishima</h3>
+                        <h5>Abheet Pandey, 20</h5>
+                        <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores expedita officiis temporibus! Esse, doloribus
+                            aut.</h5>
+                    </div>
+                </section>
                 <!--Content-->
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="blogss">
-                                <h1>Home</h1>
+                                <!-- <h1>Home</h1> -->
                                 <h2> <%= title %> </h2>
 
                                 <%- include("partials/dispblogs"); -%>
