--- a/views/community.ejs
+++ b/views/community.ejs
@@ -44,8 +44,7 @@
           <% if (name!=null){%>
             <li id="home" class="nav-item"><a class="nav-link" href="/profile/<%=penName%>">HOME</a></li>
           <%}%>
-          <li id="about" class="nav-item"><a  class="nav-link" href="/about">ABOUT US</a></li>
-          <li id="contact" class="nav-item"><a class="nav-link" href="/contact">CONTACT US</a></li>
+          <li id="about" class="nav-item"><a  class="nav-link" href="/#follow">ABOUT US</a></li>
           <li id="compose" class="nav-item"><a class="nav-link" href="/compose">CREATE</a></li>
           <li class="nav-item"><a id="menu-toggle-rt" class="nav-link" href="#"><i class="fa fa-fw fa-user"></i></a></li>
         </ul>
