--- a/views/partials/header1.ejs
+++ b/views/partials/header1.ejs
@@ -12,5 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
     crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Inconsolata&family=Pacifico&family=Roboto&family=Roboto+Slab&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="/css/styles.css">
 
