--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,8 +1,8 @@
-<div id="sidebar-wrapper-rt">
+<section id="sidebar-wrapper-rt">
     <ul class="sidebar-nav-rt">
         <% if (name!=null){%>
             <li class="sidebar-nav-rt"><%=name%></li>
-            <li class="sidebar-nav-rt">User Picture </li>
+            <div id="profilePicture"></div>
             <li class="sidebar-nav-rt"><%=penName%></li>
             <li class="sidebar-nav-rt"><%=email%></li>
             <li class="sidebar-nav-rt">User AGE</li>
@@ -10,10 +10,11 @@
             <li class="sidebar-nav-rt pub-btn"><a href="/users/logout"> sign out</a> </li>
             <li class="sidebar-nav-rt version"> v 1.0.3</li>
         <%} else {%>
+                <div id="profilePicture"></div>
                 <li class="sidebar-nav-rt pub-btn"><a href="/users/login"> sign in</a> </li>
                 <li class="sidebar-nav-rt version"> v 1.0.3</li>
         <%  } %>
         
     </ul>
 
-</div>
+</section>
