--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -7,11 +7,12 @@
             <li class="sidebar-nav-rt"><%=email%></li>
             <li class="sidebar-nav-rt">User AGE</li>
             <li class="sidebar-nav-rt pub-btn"><a href="/users/editProfile"> EDIT Profile</a> </li>
-            <li class="sidebar-nav-rt pub-btn"><a href="/users/logout"> sign out</a> </li>
+            <br>
+            <li class="sidebar-nav-rt pub-btn"><a href="/users/logout">SIGN OUT</a> </li>
             <li class="sidebar-nav-rt version"> v 1.0.3</li>
         <%} else {%>
                 <div id="profilePicture"></div>
-                <li class="sidebar-nav-rt pub-btn"><a href="/users/login"> sign in</a> </li>
+                <li class="sidebar-nav-rt pub-btn"><a href="/users/login">SIGN IN</a> </li>
                 <li class="sidebar-nav-rt version"> v 1.0.3</li>
         <%  } %>
         
