--- a/views/post.ejs
+++ b/views/post.ejs
@@ -131,8 +131,8 @@
               <%}%>
                 <br>
                 <% if (Flag){%>
-                  <a href="/edit/<%= _id %>">Edit Blog</a>
-                  <a href="/delete/<%= _id %>">Delete Blog</a>
+                  <a class="btn eded" href="/edit/<%= _id %>">Edit Blog</a>
+                  <a class="btn eded" href="/delete/<%= _id %>">Delete Blog</a>
                 <%}%>
                 <div class="blogg1">
                   <textarea name="" id="postbg" cols="180" rows="1000" disabled><%=body%></textarea>
