--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,10 +13,10 @@
             <div id="sidebar-wrapper">
                 <ul class="sidebar-nav">
                     <% if (name!=null){%>
-                        <li class="sidebar-nav"><a href="/compose" class="pub-btn"> Create A New Blog</a> </li>
+                        <li class="sidebar-nav"><a href="/compose" class="pub-btn eded"> <i class="fas fa-plus"></i> New Blog</a> </li>
                         <li class="sidebar-nav"><a href="/profile/<%=penName%>"> Dashboard</a> </li>
                     <%} else {%>
-                        <li class="sidebar-nav"><a href="/users/login" class="pub-btn btn"> Create A New Blog</a> </li>
+                        <li class="sidebar-nav"><a href="/users/login" class="pub-btn eded"> <i class="fas fa-plus"></i> New Blog</a> </li>
                         <li class="sidebar-nav"><a href="/users/login"> Dashboard</a> </li>
                     <%}%>
                     <li class="sidebar-nav"><a href="/community"> Community</a> </li>
@@ -44,7 +44,6 @@
                                 <li id="home" class="nav-item"><a class="nav-link" href="/profile/<%=penName%>">HOME</a></li>
                                 <%}%>
                                 <li id="about" class="nav-item"><a class="nav-link" href="/#follow">ABOUT US</a></li>
-                                <li id="contact" class="nav-item"><a class="nav-link" href="/contact">CONTACT US</a>
                                 </li>
                                 <li id="compose" class="nav-item"><a class="nav-link" href="/compose">CREATE</a></li>
                                 
@@ -55,17 +54,18 @@
                     </nav>
                 </div>
 
+                <!-- About profile -->
                 <section class="user-about">
                     <div id="profileDp">
                         <img src="https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png" alt="">
                     </div>
                     <div class="profileDetails">
-                        <h3>Touka_Kirishima</h3>
-                        <h5>Abheet Pandey, 20</h5>
-                        <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores expedita officiis temporibus! Esse, doloribus
-                            aut.</h5>
+                        <h3><%=proPen%></h3>
+                        <h5><%=proName%>, <%=proAge%></h5>
+                        <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores expedita officiis temporibus! Esse, doloribus aut.</h5>
                     </div>
                 </section>
+                
                 <!--Content-->
                 <div class="container-fluid">
                     <div class="row">
