--- a/public/css/home.css
+++ b/public/css/home.css
@@ -52,6 +52,7 @@ body{
     border:4px solid #da7b93;
     border-radius:20px;
     padding:10px 10px;
+    margin: 10px 7.5%;
 }
 
 .sidebar-nav{
@@ -230,7 +231,7 @@ body{
 /* User About Section */
 .user-about{
     background: linear-gradient(to left, #6b5251,#d89692);
-    margin: 30px 20px;
+    margin: 40px 25%;
     padding:20px;
     border-radius: 20px;
     color: #eae7dc;
@@ -258,11 +259,12 @@ body{
 }
 
 .profileDetails {
-    padding-left: -50px;
+    padding-right: 200px;
 }
 
 .user-about img {
-    width: 20%;
+    width: 70%;
+    border-radius: 8%;
 }
 
 
@@ -281,4 +283,10 @@ body{
 
 a.eded:hover{
     background-color: #8591ca !important;
+}
+
+.sidepic {
+    width: 30%;
+    margin: 10px 25%;
+    border-radius: 50%;
 }
