--- a/views/community.ejs
+++ b/views/community.ejs
@@ -14,10 +14,10 @@
         <ul class="sidebar-nav">
           <li class="sidebar-nav">
             <% if (name!=null){%>
-            <li class="sidebar-nav"><a href="/compose" class="pub-btn"> Create A New Blog</a> </li>
+            <li class="sidebar-nav"><a href="/compose" class="pub-btn"> <i class="fas fa-plus"></i> New Blog</a> </li>
             <li class="sidebar-nav"><a href="/profile/<%=penName%>"> Dashboard</a> </li>
             <%} else {%>
-            <li class="sidebar-nav"><a href="/users/login" class="pub-btn btn"> Create A New Blog</a> </li>
+            <li class="sidebar-nav"><a href="/users/login" class="pub-btn btn"> <i class="fas fa-plus"></i> New Blog</a> </li>
             <li class="sidebar-nav"><a href="/users/login"> Dashboard</a> </li>
             <%}%>
           <li class="sidebar-nav"><a href="/community"> Community</a> </li>
