Added option to delete user

--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -17,7 +17,16 @@
     <input type="file" name="avatar"/>
     <br>
     <button>Apply Changes</button>
+    <br>
+    <br>
 </form>
+<p id="penName" style="visibility: hidden"><%=penName%></p>
+<p id="message">Yo</p>
+<form action="", id="deleteForm">
+    <input type="text", placeholder="Enter your Pen Name to confirm the deletion of your account.", id="confirm" />
+    <button>Delete Account</button>
+</form>
+<script src="/js/deleteAcc.js" data-="<%=penName%>"></script>
 </div>
 </div>
 </body>
