made age a requried input

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
 					<i class="passview far fa-eye-slash"></i>
 					<input class="emailin" type="text" name="penName" placeholder="PenName" required/>
 					<p>*cannot be changed later</p>
-					<input class="emailin" type="text" name="age" placeholder="Age" />
+					<input class="emailin" type="text" name="age" placeholder="Age" required/>
 					<input class="emailin" type="text" list="genders" placeholder="SEX">
 					<datalist id="genders">
 						<option value="MALE">
