--- a/views/setupProfile.ejs
+++ b/views/setupProfile.ejs
@@ -13,7 +13,7 @@
 <form action="/users/setupProfile" method="post">
     <input type="text" name="penName" placeholder="Pen Name" required/><br>
     <p>Cannot be changed later</p>
-    <input type="text" name="age" placeholder="Age" /><br>
+    <input type="text" name="age" placeholder="Age" required/><br>
     <input class="emailin" type="text" list="genders" placeholder="SEX">
     <datalist id="genders">
         <option value="MALE">
