--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -57,7 +57,7 @@
                 <!-- About profile -->
                 <section class="user-about">
                     <div id="profileDp">
-                        <img src="https://cdn.business2community.com/wp-content/uploads/2017/08/blank-profile-picture-973460_640.png" alt="">
+                        <img src="data:image/<%=proAvatar.contentType%>;base64,<%=proAvatar.image.toString('base64')%>" alt="">
                     </div>
                     <div class="profileDetails">
                         <h3><%=proPen%></h3>
