--- a/views/setupProfile.ejs
+++ b/views/setupProfile.ejs
@@ -1,5 +1,6 @@
-<head>
+<%- include("partials/header1"); -%>
     <link rel="stylesheet" href="/css/edit.css">
+    <link rel="stylesheet" href="/css/home.css">
     <link rel="icon" href="/images/favicon.png">
 </head>
 
