--- a/views/community.ejs
+++ b/views/community.ejs
@@ -51,6 +51,12 @@
     </div>
   </nav>
   </div>
+  <div class="search">
+    <form action="/search/byTitle>" method="get">
+      <input type="text" id="searchbar" placeholder="Search.." name="query">
+      <button type="submit"><i class="fas fa-search"></i></button>
+    </form>
+  </div>
   
 
   <!--Content-->
