--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -8,9 +8,9 @@
             <li class="sidebar-nav-rt"><%=penName%></li>
             <li class="sidebar-nav-rt"><%=email%></li>
             <li class="sidebar-nav-rt"><%=age%></li>
-            <li class="sidebar-nav-rt pub-btn eded"><a href="/users/<%=penName%>/editProfile"> <i class="fas fa-user-edit"></i>Profile</a> </li>
+            <li class="sidebar-nav-rt pub-btn eded"><a href="/users/<%=penName%>/editProfile"> <i class="fas fa-user-edit"></i></a> </li>
             <br>
-            <li class="sidebar-nav-rt pub-btn eded"><a href="/users/logout">SIGN OUT <i class="fas fa-sign-out-alt"></i></a> </li>
+            <li class="sidebar-nav-rt pub-btn eded"><a href="/users/logout"><i class="fas fa-sign-out-alt"></i></a> </li>
             <li class="sidebar-nav-rt version"> v 1.0.3</li>
         <%} else {%>
             <li class="sidebar-nave-rt">Profile</li>
