adding forgot password

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,7 +43,7 @@
 			<span>or use your account</span>
 			<input class="emailin" type="text" name="penName" placeholder="Pen Name" />
 			<input class="emailin pass" type="password" name="password" placeholder="Password" /><i class="passview far fa-eye-slash"></i><br>
-			<!-- <a href="#">Forgot your password?</a> -->
+			<a href="/forgotPassword">Forgot your password?</a>
 			<button>Sign In</button>
 		</form>
 	</div>
