--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -7,10 +7,10 @@
 
     <div class="prof">
 <div class="wrap">
-<h2>Please enter the verification code sent to your email id.</h2>
+<h2>Enter new password.</h2>
 
-<form action="/users/verifyEmail" method="post">
-    <input type="text" name="verificationCode" placeholder="Verification Code" required/><br>
+<form action="/resetPassword/<%=token%>" method="post">
+    <input type="text" name="password" placeholder="Password" required/><br>
     <p><%=message%></p>
     <button>Submit</button>
 </form>
@@ -18,4 +18,4 @@
 </div>
 
 </body>
-<%- include("partials/footer1"); -%>
+<%- include("partials/footer1"); -%></body>
