--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header"); -%>
+<%- include("partials/header1"); -%>
 
     <h1>ERROR 404</h1>
     <h2>Sorry we couldn't find the page you are looking for.</h2>
