fixed search blogs

--- a/views/community.ejs
+++ b/views/community.ejs
@@ -52,7 +52,7 @@
   </nav>
   </div>
   <div class="search">
-    <form action="/search/byTitle>" method="get">
+    <form action="/search/byTitle" method="GET" id="searchForm">
       <input type="text" id="searchbar" placeholder="Search.." name="query">
       <button type="submit"><i class="fas fa-search"></i></button>
     </form>
