--- a/views/forgotPassword.ejs
+++ b/views/forgotPassword.ejs
@@ -1,6 +1,5 @@
-<head>
+<%- include("partials/header1"); -%>
     <link rel="stylesheet" href="/css/edit.css">
-    <link rel="icon" href="/images/favicon.png">
 </head>
 
 <body>
