user about added

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -62,7 +62,7 @@
                     <div class="profileDetails">
                         <h3><%=proPen%></h3>
                         <h5><%=proName%>, <%=proAge%></h5>
-                        <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores expedita officiis temporibus! Esse, doloribus aut.</h5>
+                        <h5><%=proAbout%></h5>
                     </div>
                 </section>
                 
