--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -11,6 +11,7 @@
 <form action="/users/<%=penName%>/editProfile" method="post" enctype="multipart/form-data">
     <input type="text" name="name" placeholder="Name: <%= name %>" />
     <input type="text" name="age" placeholder="Age: <%= age %>" />
+    <textarea name="about" id="" placeholder="<%=about%>" cols="30" rows="10">Hey! I'm using Blogbower</textarea>
     <input class="emailin" type="text" list="genders" placeholder="SEX: <%=gender%>">
     <datalist id="genders">
         <option value="MALE">
