--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
 					<div class="social-container">
 						<!-- <a href="#" class="social"><i class="far fa-eye"></i></a> -->
 						<a href="/users/google" class="social"><i class="fab fa-google"></i></a>
-						<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+						<!-- <a href="#" class="social"><i class="fab fa-facebook-f"></i></a> -->
 					</div>
 					<span>or use your email for registration</span>
 					<input class="emailin" type="text" name="name" placeholder="Name" required/>
@@ -38,7 +38,7 @@
 			<div class="social-container">
 				<!-- <a href="#" class="social"><i class="fa fa-fw fa-facebook"></i></a> -->
 				<a href="/users/google" class="social"><i class="fab fa-google"></i></a>
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+				<!-- <a href="#" class="social"><i class="fab fa-facebook-f"></i></a> -->
 			</div>
 			<span>or use your account</span>
 			<input class="emailin" type="text" name="penName" placeholder="Pen Name" />
