Edit Profile Form

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
 					<span>or use your email for registration</span>
 					<input class="emailin" type="text" name="name" placeholder="Name" required/>
 					<input class="emailin" type="email" name="email" placeholder="Email" required/>
-					<input class="emailin pass" type="password" name="password" placeholder="Password" required/>
+					<input class="emailin pass" type="password" name="password" placeholder="Password : Min 7 Characters" required/>
 					<i class="passview far fa-eye-slash"></i>
 					<input class="emailin" type="text" name="penName" placeholder="PenName" required/>
 					<p>*cannot be changed later</p>
