--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -8,7 +8,8 @@
 <div class="prof">
 <div class="wrap1">
 <h1>Edit Profile</h1>
-<form action="/users/<%=penName%>/editProfile" method="post" enctype="multipart/form-data">
+
+<form action="/users/<%=penName%>/editProfile" method="post" enctype="multipart/form-data" class="editac">
     <input type="text" name="name" placeholder="Name: <%= name %>" />
     <input type="text" name="age" placeholder="Age: <%= age %>" />
     <input type="text" name="about" id="" placeholder="Maximum 50 characters."></input>
@@ -26,14 +27,14 @@
     <br>
     <br>
 </form>
+</div>
 <p id="penName" style="visibility: hidden"><%=penName%></p>
-<p id="message">Yo</p>
-<form action="", id="deleteForm">
+<p id="message" style="font-size:20px; font-weight: bold;">Or Delete Your Account</p> 
+<form action="", id="deleteForm" class="delac">
     <input type="text", placeholder="Enter your Pen Name to confirm the deletion of your account.", id="confirm" />
     <button>Delete Account</button>
 </form>
 <script src="/js/deleteAcc.js" data-="<%=penName%>"></script>
-</div>
 </div>
 </body>
 <%- include("partials/footer1"); -%>
